Improving exception Handling by adding modified classes , making the application more robust

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.todo</groupId>
+            <artifactId>TodoListBackend</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
